# GitPulse

./: .gitignore  README.md
design-system/gitpulse/: MASTER.md
design-system/gitpulse/pages/: analysis.md  dashboard.md  home.md  insights.md  member.md  modules.md  settings.md  team.md
frontend/: CHANGELOG.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/skills/waste-detection/: SKILL.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/ai/: agent.ts  cache.ts  error-handler.ts  index.ts  model-factory.ts  prompts.ts
frontend/src/ai/deepagent/: activity-channel.ts  factory.ts  index.ts  pre-scan.ts  prompts.ts  run-analysis.ts  skill-content.ts  tauri-bridge-backend.ts  tools.ts  types.ts
frontend/src/ai/schemas/: dashboard.ts  insights.ts  member.ts
frontend/src/ai/tasks/: anomaly-detection.ts  chat.ts  dashboard-summary.ts  member-portrait.ts  member-tags.ts  report.ts  team-insights.ts
frontend/src/ai/tools/: detect-anomalies.ts  generate-report.ts  index.ts  query-collaboration.ts  query-commit-stats.ts  query-member-profile.ts  query-module-ownership.ts  query-time-pattern.ts
frontend/src/components/: ai-setup-guard.tsx  theme-provider.tsx
frontend/src/hooks/: useAIChat.ts  useAITask.ts
frontend/src/lib/: abort-signal-polyfill.ts  async-local-storage-shim.ts  chart-colors.ts
frontend/src/stores/: chat.ts  db-store.ts  project.ts  settings.ts  waste-store.ts
(+26 files in other folders)
